--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "antoinette@primeacademy.io",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "body": "^5.1.0",
+    "body-parser": "^1.15.2",
     "express": "^4.13.4",
+    "jquery": "^3.1.1",
+    "parser": "^0.1.4",
     "pg": "^6.1.0"
   }
 }
